--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,9 +1,9 @@
 ---
 interface Props {
-	title: string;
+	title: string
 }
 
-const { title } = Astro.props;
+const {title} = Astro.props
 ---
 
 <!doctype html>
@@ -47,5 +47,14 @@ const { title } = Astro.props;
 			Bitstream Vera Sans Mono,
 			Courier New,
 			monospace;
+	}
+
+	main {
+		margin: auto;
+		padding: 1rem;
+		width: min(800px, calc(100% - 2rem));
+		color: white;
+		font-size: 20px;
+		line-height: 1.6;
 	}
 </style>
