update instruction -> home page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,6 +12,11 @@ import InputField from "../components/InputField.astro"
 			<li>- Browse any amazon product and filter them as you wish</li>
 			<li>- Copy link address (URL)</li>
 			<li>- Paste the link in the input field below</li>
+			<li>- Click 'open sorted' button</li>
+			<li>
+				- All items are now sorted such that item with the most reviews comes
+				first
+			</li>
 		</ol>
 		<InputField />
 		<div id="output" class="pt-3 hidden">
