--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import InputField from "../components/InputField.astro"
 			<li>- Paste the link in the input field below</li>
 			<li>- Click 'open sorted' button</li>
 			<li>
-				- All items are now sorted such that item with the most reviews comes
+				- All items are now sorted such that items with the most reviews come
 				first
 			</li>
 		</ol>
